--- a/School project.postman_collection.json
+++ b/School project.postman_collection.json
@@ -149,13 +149,32 @@
 				"header": [],
 				"body": {
 					"mode": "raw",
-					"raw": "{\n  \"name\": \"Jane Doe\",\n  \"gender\": \"female\",\n  \"dob\": \"2005-07-12\",\n  \"contactDetails\": \"jane.doe@example.com\",\n  \"class\": \"64a7e2b8fc13ae1c4d000002\",  // class ID\n  \"feesPaid\": true\n}\n",
+					"raw": "{\n  \"name\": \"Jane Doe\",\n  \"gender\": \"female\",\n  \"dob\": \"2005-07-12\",\n  \"contactDetails\": \"jane.doe@example.com\",\n  \"class\": \"64a7e2b8fc13ae1c4d000002\",  // class ID\n  \"feesPaid\": 1000\n}\n",
 					"options": {
 						"raw": {
 							"language": "json"
 						}
 					}
 				},
+				"url": {
+					"raw": "localhost:5000/api/students",
+					"host": [
+						"localhost"
+					],
+					"port": "5000",
+					"path": [
+						"api",
+						"students"
+					]
+				}
+			},
+			"response": []
+		},
+		{
+			"name": "Get students",
+			"request": {
+				"method": "GET",
+				"header": [],
 				"url": {
 					"raw": "localhost:5000/api/students",
 					"host": [
